# Mizuki-Bot

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  bot.py  entrypoint.sh  hosts  pyproject.toml  requirements.txt
data/plugins/: ArkRail_gacha.json  ArkRail_gacha_pool_config.json  ArkRail_gacha_pool_info.json  ArkRail_gacha_record.json  ArkRail_show_info.json  Chat.json  Currency_account.json  Currency_sign_in.json  Help.json
database/: Mizuki_DB.db
mizuki/database/: utils.py
mizuki/plugins/ArkRail/: DB.py  __init__.py  effect.py  gacha.py  operator.py  operator_data.json  operators_data.json  playing_manager.py  pool_config.py  show_info.py  show_info_command.py  skill.py  skill_data.json  skills_data.json  utils.py
mizuki/plugins/BotManage/: __init__.py  boot_script.py  cmd.py  config.yaml  offline_reminder.py  reboot.py  status.py  update.py
mizuki/plugins/Chat/: Session.py  SessionManager.py  __init__.py
mizuki/plugins/ChatGPT/: AIDraw.py  ChatGPT.py  Session.py  SessionManager.py  Text2Image.py  Timer.py  __init__.py
mizuki/plugins/Currency/: __init__.py  account.py  sign_in.py  test.py  utils.py
mizuki/plugins/GuildBinding/: __init__.py  utils.py
mizuki/plugins/Help/: PluginInfo.py  __init__.py  draw_img.py
mizuki/plugins/LoliconSetu/: Lolicon.py  SetuImage.py  __init__.py
mizuki/plugins/Music/: __init__.py
mizuki/plugins/OpenAI/: ChatGPT.py  DallE.py  Session.py  SessionManager.py  Text2Image.py  __init__.py
mizuki/plugins/Replicate/: ModelsManager.py  Replicate.py  __init__.py  (+2 more)
(+71 files in other folders)
