[project]
name = "Mizuki"
version = "0.1.0"
description = "Mizuki"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "QQ 频道", module_name = "nonebot.adapters.qqguild"}
]
plugins = []
plugin_dirs = ["mizuki/plugins"]
builtin_plugins = []
